[project]
name = "hidreamblockswap"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Njbx/ComfyUI-HidreamBlockswap"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-HidreamBlockswap"
Icon = ""
